# AStarAlgorithm

./: .gitignore  CMakeLists.txt  License.md  Readme.md
Documentation/: ChildToParent.drawio  Map.md
Include/: AStar.hpp
Source/: FindPath.cpp  MinPathBucharest.cpp  PuzzleEight.cpp
